Update profile picture from device or camera feature added using image picker package, Firestore and Firebase Storage

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,6 +45,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+
 	<!-- Google Sign-in Section -->
 <key>CFBundleURLTypes</key>
 <array>
@@ -59,5 +60,13 @@
 	</dict>
 </array>
 <!-- End of the Google Sign-in Section -->
+
+<!-- Permission for Picking Images From Gallery or Taking Image from Camera -->
+<key>NSPhotoLibraryUsageDescription</key>
+<string>App requires access to the photo library for picking pictures.</string>
+<key>NSCameraUsageDescription</key>
+<string>App requires access to the camera for taking pictures</string>
+<!-- End of Permission for Picking Images From Gallery or Taking Image from Camera -->
+
 </dict>
 </plist>
