--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.9.0
   firebase_sign_in: ^0.0.16
+  firebase_storage: ^11.2.6
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
+  image_picker: ^1.0.4
   multi_stream_builder: ^0.0.1
 
 flutter_launcher_icons:
@@ -62,6 +64,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/add_image.png
+    - assets/images/camera.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
