--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   emoji_picker_flutter: ^1.6.1
   firebase_auth: ^4.9.0
+  firebase_messaging: ^14.6.7
   firebase_sign_in: ^0.0.16
   firebase_storage: ^11.2.6
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
+  http: ^1.1.0
   image_picker: ^1.0.4
   multi_stream_builder: ^0.0.1
 
